infra/metrics/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: grafana.dsdemo.valesordev.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
