infra/metrics/mimir-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimir-ingress
  namespace: metrics
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mimir.local.valesor.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mimir-nginx
                port:
                  number: 80
